src/snapshots/alma__parser__tests__test_module_parser__signatures-5.snap
---
source: src/parser.rs
assertion_line: 3076
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit a -> Fruit b -> Fruit c\n\nsignature : Fruit d -> Fruit e -> Fruit f\n\ntest = 5\n\")"
---
Input:

module Test exposing (main)

main : Fruit a -> Fruit b -> Fruit c

signature : Fruit d -> Fruit e -> Fruit f

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: Index(
                        1,
                    ),
                    end: Index(
                        1,
                    ),
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: Index(
                    4,
                ),
                end: Index(
                    4,
                ),
                value: Identifier(
                    Node {
                        start: Index(
                            4,
                        ),
                        end: Index(
                            4,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: Index(
                            6,
                        ),
                        end: Index(
                            6,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    typ: Fun(
                        [
                            App(
                                Node {
                                    start: Index(
                                        8,
                                    ),
                                    end: Index(
                                        9,
                                    ),
                                    value: Constructor_ {
                                        name: Node {
                                            start: Index(
                                                8,
                                            ),
                                            end: Index(
                                                8,
                                            ),
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: Index(
                                                        9,
                                                    ),
                                                    end: Index(
                                                        9,
                                                    ),
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 4,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                            App(
                                Node {
                                    start: Index(
                                        11,
                                    ),
                                    end: Index(
                                        12,
                                    ),
                                    value: Constructor_ {
                                        name: Node {
                                            start: Index(
                                                11,
                                            ),
                                            end: Index(
                                                11,
                                            ),
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: Index(
                                                        12,
                                                    ),
                                                    end: Index(
                                                        12,
                                                    ),
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 5,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                        App(
                            Node {
                                start: Index(
                                    14,
                                ),
                                end: Index(
                                    15,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Index(
                                            14,
                                        ),
                                        end: Index(
                                            14,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: Index(
                                                    15,
                                                ),
                                                end: Index(
                                                    15,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 6,
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
            ),
            TypeSignature(
                TypeSignature {
                    name: Node {
                        start: Index(
                            16,
                        ),
                        end: Index(
                            16,
                        ),
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 7,
                            },
                        },
                    },
                    typ: Fun(
                        [
                            App(
                                Node {
                                    start: Index(
                                        18,
                                    ),
                                    end: Index(
                                        19,
                                    ),
                                    value: Constructor_ {
                                        name: Node {
                                            start: Index(
                                                18,
                                            ),
                                            end: Index(
                                                18,
                                            ),
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: Index(
                                                        19,
                                                    ),
                                                    end: Index(
                                                        19,
                                                    ),
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 8,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                            App(
                                Node {
                                    start: Index(
                                        21,
                                    ),
                                    end: Index(
                                        22,
                                    ),
                                    value: Constructor_ {
                                        name: Node {
                                            start: Index(
                                                21,
                                            ),
                                            end: Index(
                                                21,
                                            ),
                                            value: CapitalizedIdentifier_ {
                                                name: SymbolU32 {
                                                    value: 3,
                                                },
                                            },
                                        },
                                        params: [
                                            Var(
                                                Node {
                                                    start: Index(
                                                        22,
                                                    ),
                                                    end: Index(
                                                        22,
                                                    ),
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 9,
                                                        },
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                        App(
                            Node {
                                start: Index(
                                    24,
                                ),
                                end: Index(
                                    25,
                                ),
                                value: Constructor_ {
                                    name: Node {
                                        start: Index(
                                            24,
                                        ),
                                        end: Index(
                                            24,
                                        ),
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [
                                        Var(
                                            Node {
                                                start: Index(
                                                    25,
                                                ),
                                                end: Index(
                                                    25,
                                                ),
                                                value: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 10,
                                                    },
                                                },
                                            },
                                        ),
                                    ],
                                },
                            },
                        ),
                    ),
                },
            ),
            Untyped(
                Pattern(
                    Node {
                        start: Index(
                            26,
                        ),
                        end: Index(
                            26,
                        ),
                        value: Identifier(
                            Node {
                                start: Index(
                                    26,
                                ),
                                end: Index(
                                    26,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 11,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: Index(
                            28,
                        ),
                        end: Index(
                            28,
                        ),
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                5.0,
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
