src/snapshots/alma__parser__tests__test_module_parser__signatures.snap
---
source: src/parser.rs
assertion_line: 3084
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain : Fruit a b\n\nsignature : Fruit b\n\ntest = 5\n\")"
---
Input:

module Test exposing (main)

main : Fruit a b

signature : Fruit b

test = 5


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    1,
                ),
                typ: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            TypeSignature(
                TypeSignature {
                    name: Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            2,
                        ),
                    },
                    typ: App(
                        Constructor {
                            span: Index(
                                6,
                            ),
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 3,
                                },
                                span: Index(
                                    3,
                                ),
                            },
                            params: [
                                Var(
                                    Identifier {
                                        name: SymbolU32 {
                                            value: 4,
                                        },
                                        span: Index(
                                            4,
                                        ),
                                    },
                                ),
                                Var(
                                    Identifier {
                                        name: SymbolU32 {
                                            value: 5,
                                        },
                                        span: Index(
                                            5,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            TypeSignature(
                TypeSignature {
                    name: Identifier {
                        name: SymbolU32 {
                            value: 6,
                        },
                        span: Index(
                            7,
                        ),
                    },
                    typ: App(
                        Constructor {
                            span: Index(
                                10,
                            ),
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 3,
                                },
                                span: Index(
                                    8,
                                ),
                            },
                            params: [
                                Var(
                                    Identifier {
                                        name: SymbolU32 {
                                            value: 5,
                                        },
                                        span: Index(
                                            9,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            11,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 7,
                                },
                                span: Index(
                                    11,
                                ),
                            },
                        ),
                    },
                    Expression {
                        span: Index(
                            13,
                        ),
                        typ: RefCell {
                            value: None,
                        },
                        expr: Float(
                            5.0,
                        ),
                    },
                ),
            ),
        ],
        type_definitions: [],
    },
    [],
)
