src/snapshots/alma__parser__tests__test_module_parser__signatures_in_let_bindings.snap
---
source: src/parser.rs
assertion_line: 3733
expression: "parse(\"\\\nmodule Test exposing (main)\n\nmain =\n    let\n        test : Fruit a -> Fruit b -> Fruit c\n\n        test2 : Fruit a -> Fruit b -> Fruit c\n        test2 a b = c\n\n        test3 a b = c\n\n    test\n\")"
---
Input:

module Test exposing (main)

main =
    let
        test : Fruit a -> Fruit b -> Fruit c

        test2 : Fruit a -> Fruit b -> Fruit c
        test2 a b = c

        test3 a b = c

    test


Result:

module Test
    exports:
        main 22:26 22:26
    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Identifier main 29:33 29:33
            expr:
                Let 40:190
                    definitions:
                        TypeSignature
                            test 52:56:
                                Fn
                                    params:
                                        Fruit 59:64 59:66
                                            a 65:66
                                        Fruit 70:75 70:77
                                            b 76:77
                                    Fruit 81:86 81:88
                                        c 87:88
                        Typed
                            test2 98:103:
                                Fn
                                    params:
                                        Fruit 106:111 106:113
                                            a 112:113
                                        Fruit 117:122 117:124
                                            b 123:124
                                    Fruit 128:133 128:135
                                        c 134:135
                            Lambda test2 144:149
                                params:
                                    Identifier a 150:151 150:151
                                    Identifier b 152:153 152:153
                                Identifier c 156:157 156:157
                        Untyped
                            Lambda test3 167:172
                                params:
                                    Identifier a 173:174 173:174
                                    Identifier b 175:176 175:176
                                Identifier c 179:180 179:180
                    Identifier test 186:190 186:190



